--- a/source/translated/fr/howto.nfsha.po
+++ b/source/translated/fr/howto.nfsha.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenSVC 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-18 11:41\n"
+"POT-Creation-Date: 2014-06-26 11:22+0200\n"
 "PO-Revision-Date: 2014-03-03 15:52+01\n"
 "Last-Translator: Christophe Varoqui <christophe.varoqui at opensvc.com>\n"
 "Language-Team: OpenSVC translation team <translation at opensvc.com>\n"
@@ -17,35 +17,44 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 # 6c60bc5986ee4bf487ff8693e7262960
-#: ../../howto.nfsha.rst:121
+#: ../../howto.nfsha.rst:30 ../../howto.nfsha.rst:95 ../../howto.nfsha.rst:103
+#: ../../howto.nfsha.rst:130 ../../howto.nfsha.rst:139
 msgid "**On both nodes**"
 msgstr "**Sur les deux noeuds**"
-
-# 05db04ac7f2b4fe191f6f62fdd79f776
-# 992aa5b87c0c446c9469bfee552c9e1f
-# df2f232a43394621871b30d728328520
-# c3088331804c474a80d3ef6c62a8520a
-#: ../../howto.nfsha.rst:28 ../../howto.nfsha.rst:87 ../../howto.nfsha.rst:93
-#: ../../howto.nfsha.rst:114
-msgid "**On both nodes**::"
-msgstr "**Sur les deux noeuds** ::"
 
 # 0f4c65922fd448b3955e2134c7693f59
 # e08ad56609b741bfa21c124d6a32ea5c
 # 947c4e3aed9a4c1e8656a9b0a3e687b4
 # f0abac2d690a48438f042ef3c10ae6ab
-#: ../../howto.nfsha.rst:13 ../../howto.nfsha.rst:38 ../../howto.nfsha.rst:103
-#: ../../howto.nfsha.rst:110
-msgid "**On the master node**::"
+#: ../../howto.nfsha.rst:13 ../../howto.nfsha.rst:115
+#: ../../howto.nfsha.rst:124
+#, fuzzy
+msgid "**On the master node**"
 msgstr "**Sur le noeud maître** ::"
 
+# 0f4c65922fd448b3955e2134c7693f59
+# e08ad56609b741bfa21c124d6a32ea5c
+# 947c4e3aed9a4c1e8656a9b0a3e687b4
+# f0abac2d690a48438f042ef3c10ae6ab
+#: ../../howto.nfsha.rst:42
+#, fuzzy
+msgid "**On the master node**:"
+msgstr "**Sur le noeud maître** ::"
+
+# 76c7b0f3a3cf4166a95db9d057e24b2e
+#: ../../howto.nfsha.rst:78
+msgid "And activate this script."
+msgstr ""
+
 # 7e28192922c84ef18eaa5bd9bf0463ef
-#: ../../howto.nfsha.rst:91
+#: ../../howto.nfsha.rst:101
 msgid "Change these system configuration files to use this new mountpoint."
-msgstr "Changer ces fichiers de configurations du système pour utiliser ces nouveaux points d'ancrage."
+msgstr ""
+"Changer ces fichiers de configurations du système pour utiliser ces nouveaux "
+"points d'ancrage."
 
 # 5784c11f7aed4bb48caa9e0cdc0de4e7
-#: ../../howto.nfsha.rst:119
+#: ../../howto.nfsha.rst:137
 msgid "Configure nfs to listen on the service IP address"
 msgstr "Configurer nfs pour écouter sur l'adresse internet du service"
 
@@ -55,31 +64,31 @@ msgid "Create a HA service, using the :ref:`howto.ha` howto."
 msgstr "Créer un service HA, en utilisant le guide :ref:`howto.ha`."
 
 # 539f08d154414011b60f86d9bb08ffac
-#: ../../howto.nfsha.rst:36
+#: ../../howto.nfsha.rst:40
 msgid "Create the OpenSVC service startup script."
 msgstr "Créer le lanceur du service OpenSVC."
 
 # 901af789b65e4b539b807e1ba46f86c4
-#: ../../howto.nfsha.rst:85
+#: ../../howto.nfsha.rst:93
 msgid "Create the new mount point."
 msgstr "Créer le nouveau point d'ancrage."
 
 # 52c7b59cd46c43a58f366f5e984cbd6a
-#: ../../howto.nfsha.rst:126
+#: ../../howto.nfsha.rst:144
 msgid "Epilog"
 msgstr "Epilogue"
 
 # fd3853aabc824cdaa8e8d89cbcb00324
-#: ../../howto.nfsha.rst:21
+#: ../../howto.nfsha.rst:23
 msgid ""
 "Linux NFS service uses ``/var/lib/nfs`` to store both node-private and "
 "service-private data. The tricky part of the HA setup is to separate this "
 "data."
 msgstr ""
-"Le service NFS sous Linux utilise ``/var/lib/nfs`` pour stocker à la "
-"fois les méta-données privées au noeud et celles qui doivent basculer. "
-"La complexité dans la mise en haute disponibilité est de séparer ces "
-"deux types de données."
+"Le service NFS sous Linux utilise ``/var/lib/nfs`` pour stocker à la fois "
+"les méta-données privées au noeud et celles qui doivent basculer. La "
+"complexité dans la mise en haute disponibilité est de séparer ces deux types "
+"de données."
 
 # d0094ebe285047c99180d408cb973af0
 #: ../../howto.nfsha.rst:11
@@ -94,7 +103,7 @@ msgstr ""
 "système de fichier basculable."
 
 # 61df5d974b1e4d54aa1f76700ff64001
-#: ../../howto.nfsha.rst:123
+#: ../../howto.nfsha.rst:141
 msgid "Modify STATD_HOSTNAME in /etc/sysconfig/nfs"
 msgstr "Modifier STATD_HOSTNAME dans /etc/sysconfig/nfs"
 
@@ -104,7 +113,7 @@ msgid "NFS High Availability setup"
 msgstr "NFS en haute disponibilité"
 
 # 6cc70853a2f646968ee9e7b3d424eb8e
-#: ../../howto.nfsha.rst:19
+#: ../../howto.nfsha.rst:21
 msgid "NFS configuration"
 msgstr "Configuration NFS"
 
@@ -117,30 +126,39 @@ msgid ""
 "failover."
 msgstr ""
 "NFS est un service délicat à mettre en haute disponibilité. Sans "
-"configuration soigneuse, les clients NFS ont tendance à se figer "
-"en attente d'un aquittement d'entrée/sortie sur le partage. Ce "
-"guide expose la configuration adéquate pour une bascule transparente "
-"du service NFS sous Linux."
+"configuration soigneuse, les clients NFS ont tendance à se figer en attente "
+"d'un aquittement d'entrée/sortie sur le partage. Ce guide expose la "
+"configuration adéquate pour une bascule transparente du service NFS sous "
+"Linux."
 
 # 0538ed781b3240ab84966d03e3978286
-#: ../../howto.nfsha.rst:24
+#: ../../howto.nfsha.rst:26
 msgid "NFS server startup"
 msgstr "Démarrage du serveur NFS"
 
 # 023917098d914460bc6619330ecedf73
-#: ../../howto.nfsha.rst:26
+#: ../../howto.nfsha.rst:28
 msgid ""
 "NFS startup will be handled by the OpenSVC service. Stop the NFS service and "
 "inhibit its launch at server startup."
 msgstr ""
-"Le démarrage du service NFS sera pris en charge par le service OpenSVC. "
-"Il faut donc arrêter le service NFS et inhiber son démarrage au boot "
-"des serveurs."
+"Le démarrage du service NFS sera pris en charge par le service OpenSVC. Il "
+"faut donc arrêter le service NFS et inhiber son démarrage au boot des "
+"serveurs."
 
 # b2487b02810f4b92ac080d6187547fb1
-#: ../../howto.nfsha.rst:81
+#: ../../howto.nfsha.rst:89
 msgid "Node private data"
 msgstr "Données propres aux noeuds"
+
+# 0f4c65922fd448b3955e2134c7693f59
+# e08ad56609b741bfa21c124d6a32ea5c
+# 947c4e3aed9a4c1e8656a9b0a3e687b4
+# f0abac2d690a48438f042ef3c10ae6ab
+#: ../../howto.nfsha.rst:80
+#, fuzzy
+msgid "On the master node"
+msgstr "**Sur le noeud maître** ::"
 
 # d86b64826a7a45e3a9a0d15ce607a9d8
 #: ../../howto.nfsha.rst:7
@@ -148,7 +166,7 @@ msgid "OpenSVC HA setup"
 msgstr "Configuration HA pour OpenSVC"
 
 # 986c2798fbb543a7b1e5c181e0c3d3ec
-#: ../../howto.nfsha.rst:128
+#: ../../howto.nfsha.rst:146
 msgid ""
 "Reboot the nodes to activate the new ``rpc_pipefs`` location and start "
 "testing failovers."
@@ -157,26 +175,26 @@ msgstr ""
 "``rpc_pipefs`` et commencer à tester des bascules."
 
 # 3e8ecb890d654f008895a3d2f1aa1f7f
-#: ../../howto.nfsha.rst:99
+#: ../../howto.nfsha.rst:111
 msgid "Service private data"
 msgstr "Données propres au service"
 
 # 19e683ffcb13411085a10e2abc7801e5
-#: ../../howto.nfsha.rst:83
+#: ../../howto.nfsha.rst:91
 msgid ""
 "The data that must remain local to each node is the RPC pipefs pseudo "
 "filesystem. It is mounted by default under ``/var/lib/nfs/rpc_pipefs``. As "
 "``/var/lib/nfs`` will be moved to the shared filesystem, we need to change "
 "the location of this mount point."
 msgstr ""
-"Les données qui doivent rester locales aux noeuds sont contenues dans "
-"le pseudo système de fichiers RPC pipefs. Sont point d'ancrage par défaut "
-"est ``/var/lib/nfs/rpc_pipefs``. Comme ``/var/lib/nfs`` doit être déplacé "
-"dans l'arborescence du système de fichier basculable, il faut changer "
+"Les données qui doivent rester locales aux noeuds sont contenues dans le "
+"pseudo système de fichiers RPC pipefs. Sont point d'ancrage par défaut est "
+"``/var/lib/nfs/rpc_pipefs``. Comme ``/var/lib/nfs`` doit être déplacé dans "
+"l'arborescence du système de fichier basculable, il faut changer "
 "l'emplacement de ce point d'ancrage."
 
 # 5aed2d0660d447efb0ac564b3b2f401c
-#: ../../howto.nfsha.rst:108
+#: ../../howto.nfsha.rst:122
 msgid ""
 "The exports list should also move with the service, to avoid configuration "
 "drift between the 2 nodes."
@@ -185,11 +203,18 @@ msgstr ""
 "éviter une dérive de configuration entre les deux noeuds."
 
 # d12a10d4904943539c71dfa0c55e30c6
-#: ../../howto.nfsha.rst:101
+#: ../../howto.nfsha.rst:113
 msgid ""
 "``/var/lib/nfs`` contains data essential for nfs client sessions takeover. "
 "Thus, this directory must follow the service in case of failover."
 msgstr ""
 "``/var/lib/nfs`` contient des données essentielles pour la reprise des "
-"sessions clientes. C'est pourquoi ce répertoire doit suivre le service "
-"en cas de bascule."
+"sessions clientes. C'est pourquoi ce répertoire doit suivre le service en "
+"cas de bascule."
+
+# 05db04ac7f2b4fe191f6f62fdd79f776
+# 992aa5b87c0c446c9469bfee552c9e1f
+# df2f232a43394621871b30d728328520
+# c3088331804c474a80d3ef6c62a8520a
+#~ msgid "**On both nodes**::"
+#~ msgstr "**Sur les deux noeuds** ::"
